--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,12 @@ dependencies = [
     "transformers>=4.57.3",
     "uvicorn>=0.36.0",
     "wandb>=0.21.3",
+    "absl-py>=2.3.1",
+    "grpcio>=1.76.0",
+    "markdown>=3.10",
+    "tensorboard>=2.20.0",
+    "tensorboard-data-server>=0.7.2",
+    "werkzeug>=3.1.4",
 ]
 
 [dependency-groups]
